# Babel

./: .gitignore  BUILD.sh  CMakeLists.txt  Makefile  RUN.sh  Readme.md  TODO  babel_client.pro  babel_gui  babel_gui.pro  cmake_install.cmake  conanfile.txt  user.db
.github/workflows/: c-cpp.yml
babel_client_autogen/: mocs_compilation.cpp
babel_client_autogen/R3QVDE4IFZ/: moc_App.cpp  moc_Call.cpp  moc_ContactLabel.cpp  moc_Login.cpp  moc_ModifyPopup.cpp  moc_UserMenu.cpp
include/: Protocol.hpp  codec.hpp  security.hpp
include/GUI/: App.h  Contact.h  Login.hpp  ModifyPopup.h  UserMenu.h  constants.h
include/client/: Aopus.hpp  Aportaudio.hpp  Asqlite3.hpp  Sound.hpp  TCP.hpp
include/client/protocol/: ClientUdp.hpp
include/client/sound/: Sound.hpp
include/common/: User.h  User.hpp  group.hpp  standard.h
include/server/: Aasio.hpp  Asio.hpp  Asqlite3.hpp  Chat.hpp  Handler.hpp  Logs.hpp  Server.hpp  ServerUdp.hpp  TCP.hpp  TcpServer.hpp  UdpServer.hpp
include/sound/: Sound.hpp
resources/: UML_TCP_SERVER.md  UML_UDP_SERVER.md
src/: babel.cpp  security.cpp
src/GUI/: App.cpp  App.h  Call.cpp  Call.hpp  Contact.cpp  Contact.h  ContactLabel.hpp  Login.cpp  Login.hpp  ModifyPopup.cpp  ModifyPopup.h  UserMenu.cpp  UserMenu.h
src/abstraction/: Aportaudio.cpp
src/client/: Aportaudio.cpp  Asqlite3.cpp  Sound.cpp  babel.cpp  client.cpp  main.cpp  test.cpp
src/client/GUI/: App.cpp  App.h  Call.cpp  ContactLabel.cpp  ContactLabel.h  Login.cpp  ModifyPopup.h  UserMenu.cpp  UserMenu.h
src/client/signals/: signals.cpp
src/client/sound/: Codec.cpp  RecorderPlayer.cpp
src/client/sound/abstraction/: Aportaudio.cpp
src/client/sound/codec/: Decoder.cpp  Encoder.cpp
src/client/tcp/: TCP.cpp  client.cpp
src/client/udp/: ClientUdp.cpp
src/codec/: Compressor.cpp  Decoder.cpp  Encoder.cpp
src/server/: Makefile  babel.cpp  babel_server  main.cpp
src/server/database/: Asqlite3.cpp
src/server/include/: c_handler.hpp  client.hpp  connection.hpp  entity.hpp  entry.hpp  handler.hpp  logic.hpp  logs.hpp  network.hpp  server.hpp
src/server/signals/: signals.cpp
src/server/src/: c_handler.cpp  entry.cpp  main.cpp  network.cpp  s_handler.cpp  server.cpp
src/server/src/connection/: connect.cpp  connection_connect.cpp  request_accept.cpp  request_pending.cpp  request_refuse.cpp  welcome.cpp
src/server/tcp/: TcpServer.cpp  handler.cpp  newTcp.cpp  server.cpp
src/server/tcp/database/: Asqlite3.cpp
src/server/udp/: Group.cpp  UDPServer.cpp  UdpServer.cpp  UdpSession.cpp  test.cpp
src/sound/: Codec.cpp  RecorderPlayer.cpp
src/sound/abstraction/: Aportaudio.cpp
src/sound/codec/: Decoder.cpp  Encoder.cpp
